--- a/src/components/Excerpt/style.module.css
+++ b/src/components/Excerpt/style.module.css
@@ -15,6 +15,7 @@
 
 .content {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .text1,
@@ -24,6 +25,8 @@
   line-height: 30rem;
 }
 .text1 {
+  min-width: 420rem;
+  padding-bottom: 70rem;
   text-align: right;
 }
 .cta {
