--- a/src/components/Wrapper/style.module.css
+++ b/src/components/Wrapper/style.module.css
@@ -1,6 +1,6 @@
 .wrapper {
   position: relative;
-  max-width: 1440rem;
+  max-width: 1360rem;
   margin: 0 auto;
-  padding: 0 80rem;
+  padding: 0 40rem;
 }
